# STI_FX_Intervention

./: .buildinfo  .gitignore  README.md  create_kernel.sh  genindex.html  jlab.sh  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  step000_descriptive_plot.py  step001_exogenous_variable_exploration.py  step002_data_treatment.py  step003_model_cross_validation.py  step004A_best_model_combination.py  step004B_best_density_model.py  step005_create_html.py  step005_create_html_to_pdf.py
.github/workflows/: book.yml
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml
_sources/docs/: index.md  utils.md
book/: _config.yml  _toc.yml
book/.ipynb_checkpoints/: _config-checkpoint.yml  _toc-checkpoint.yml
book/docs/: index.md  utils.md
data/clean/: gha.csv  gha.xlsx
data/raw/: zchen4_edi_export_01132023_204517 - Copy.xlsx  ~$edi.xlsx
docs/: index.html  utils.html
docs/Central-Banking/: practice.html  theory.html
docs/IMF-MODEL/: VaR-FX Interventions.html
docs/Key-Statistical-Concepts/: Lecture-content.html
docs/fxi/: practice.html  (+1 more)
html_report/: cv.html  desc.html  fcast.html  master.html
intermediary results/: step003_crucial_results.out.bak  step004a_forecasted_density_w_df_final.csv  step004a_forecasted_mean_w_df.csv  step004b_crucial_results.out.dir
intermediary_results/: step000_crucial_results.out.bak  step004a_crucial_results.out.dir  step004a_forecasted_density_w_df.csv
modules/: distGARCH.py  lib.py
output/: step000_df_des.csv  step001_exogenous_variables_exploration_rtable.xlsx  step003_combination_pool_for_density.csv  step003_combination_pool_for_mean.csv  step003_cross_validation_performace_table.xlsx  step003_non_cross_validation_performace_table.xlsx  step003_performace_table_all_in_one.xlsx
presentations/: Constrained discretion approach for FXI triggers EURUSD.pptx
(+351 files in other folders)
