[tool.poetry]
name = "sti_fx_intervention"
version = "0.0.0"
description = "..."
authors = ["Amine Raboun (Ph.D), Romain Lafarguette (Ph.D)"]
readme = "readme.md"
repository = "https://github.com/amineraboun/STI_FX_Intervention"


[tool.poetry.dependencies]
python =  ">=3.9.0,<4.0"
jupyter-book = "^0.15.0"
varfxi = "^0.0.1"
matplotlib = "^3.7.1"
statsmodels = "^0.13.5"
xlrd = "^2.0.1"
arch = "^5.3.1"
seaborn = "^0.12.2"
pandas-datareader = "^0.10.0"


[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"
